// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#333333",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`2. with a very long byline 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#333333",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      , Environment Editor | 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      , Environment Editor | 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#333333",
          "flexDirection": "row",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;
